--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
       <div class="medium-6 columns medium-pull-6">
         <h2>Agile Project Management</h2>
         <p>
-          As an experienced agile project manager, AgilePhD is the niche provider
-          clients seek out when they are looking to implement business-enhancing,
-          agile PMO services that improve project and portfolio performance.
+          This website is currently a test project for ISDS 3107
         </p>
 
       </div>
