--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           src="https://s3.amazonaws.com/agilephd/project_management.jpg">
       </div>
       <div class="medium-6 columns medium-pull-6">
-        <h2>Agile Project Management</h2>
+        <h2>About this website</h2>
         <p>
           This website is currently a test project for ISDS 3107
         </p>
