--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
     <div class="reveal" id="contactModal" data-reveal>
       <h4>Contact information</h4>
       <ul class="no-bullet">
-        <li>Dr. James Davis, PhD, PMP, CSP, CSM</li>
+        <li>Daniel Denis Petrov</li>
         <li>
           <a href="mailto:james@agilephd.com?Subject=AgilePhD" target="_top">
-            james@agilephd.com
+            dpetro3@lsu.edu
           </a>
         </li>
         <li><a href="tel:+12258920230">+1.225.892.0230</a></li>
