--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>Petrovinator | Welcome</title>
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   </head>
   <body>
@@ -30,7 +30,7 @@
 
     <div class="callout large">
       <div class="row column text-center">
-        <h1>Changing the World Through Design</h1>
+        <h1>Welcome to Petrovinator's website</h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris.</p>
         <a href="#" class="button large">Learn More</a>
         <a href="#" class="button large hollow">Learn Less</a>
