--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="callout large">
       <div class="row column text-center">
         <h1>Welcome to Petrovinator's website</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris.</p>
+        <p class="lead">This website is a dedicated portfolio where I dispaly coursework and internship experience.</p>
         <a href="#" class="button large">Learn More</a>
         <a href="#" class="button large hollow">Learn Less</a>
       </div>
