--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
         <img class="thumbnail" src="https://placehold.it/750x350">
       </div>
       <div class="medium-6 columns medium-pull-6">
-        <h2>About this website.</h2>
-        <p> This website is a project for ISDS 3107</p>
+        <h2>About myself</h2>
+        <p> My name is Daniel Petrov, a first generation American born and raised in New Orleans, Louisiana. Since I was in High School, I have always had a strong passion for technology and anything computer related. That is why I decided to pursue a degree from Louisiana State University in Information Systems and Decision Sciences.
+        </p>
       </div>
     </div>
 
