--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="row">
       <div class="medium-6 columns medium-push-6">
-        <img class="thumbnail" src="https://placehold.it/750x350">
+        <img class="thumbnail" src="https://media.licdn.com/dms/image/C4E03AQEKbYV6kNgqYQ/profile-displayphoto-shrink_400_400/0/1619331872474?e=2147483647&v=beta&t=5uHtktATd0bXg3jSlPtSTTvp4dkeRnONFHGSk8iWbI8">
       </div>
       <div class="medium-6 columns medium-pull-6">
         <h2>About myself</h2>
