--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
 
     <div class="row">
       <div class="medium-4 columns">
-        <h3>Photoshop</h3>
+        <h3>College Coursework</h3>
         <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
       </div>
       <div class="medium-4 columns">
-        <h3>Javascript</h3>
+        <h3>Internship Experience</h3>
         <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
       </div>
       <div class="medium-4 columns">
-        <h3>Marketing</h3>
+        <h3>Future Job Outlooks</h3>
         <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
       </div>
     </div>
@@ -80,7 +80,6 @@
     <div class="row column">
       <h3>My Recent Work</h3>
     </div>
-<p> https://docs.google.com/presentation/d/1DOKWny6Mmt2uarzxD-ArKJybczkcji4665dTjRGGU-k/edit?usp=sharing</p>
   
 
     <hr>
