--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="row">
       <div class="medium-4 columns">
         <h3>College Coursework</h3>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+        <p>Relevant Coursework Includes: PowerBI, Python, Excel, AWS, Tableau, SQL, Scrum and Agile, Business Management, Applied Statistics. </p>
       </div>
       <div class="medium-4 columns">
         <h3>Internship Experience</h3>
