--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
       <div class="medium-4 columns">
         <h3>Future Job Outlooks</h3>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+        <p> I am currently looking for any of the following or similar roles: Data Analyst, Data Scientist, Business Analyst, IT Developer, Technical Product Manager, Business Intelligence Analyst. </p>
       </div>
     </div>
 
