--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
       </div>
       <div class="medium-4 columns">
         <h3>Internship Experience</h3>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+        <p> - IT Intern at United States Eastern District Courthouse New Orleans
+            - IT Intern at Kinesics LLC
+            - IT Intern at IDScan.net </p>
       </div>
       <div class="medium-4 columns">
         <h3>Future Job Outlooks</h3>
