--- a/index.html
+++ b/index.html
@@ -1,104 +1,85 @@
-<!doctype html>
-<html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Petrovinator | Welcome</title>
-    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-  </head>
-  <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Petrovinator's Portfolio</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            color: #333;
+        }
 
-    <!-- Start Top Bar -->
-    <div class="top-bar">
-      <div class="top-bar-left">
-        <ul class="menu">
-          <li class="menu-text">Yeti Agency</li>
-          <li><a href="#">One</a></li>
-          <li><a href="#">Two</a></li>
+        header {
+            background-color: #3498db;
+            color: #fff;
+            text-align: center;
+            padding: 2em 0;
+        }
+
+        section {
+            margin: 2em;
+        }
+
+        h2 {
+            color: #3498db;
+        }
+
+        p {
+            line-height: 1.6;
+        }
+
+        a {
+            color: #3498db;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to Petrovinator's Website</h1>
+        <p>This website is a dedicated portfolio where I display coursework and internship experience.</p>
+    </header>
+
+    <section>
+        <h2>About Myself</h2>
+        <p>My name is Daniel Petrov, a first-generation American born and raised in New Orleans, Louisiana. Since High School, I've had a strong passion for technology and computer-related subjects. I pursued a degree from Louisiana State University in Information Systems and Decision Sciences.</p>
+    </section>
+
+    <section>
+        <h2>College Coursework</h2>
+        <p>Relevant coursework includes Project Management (SDLC), PowerBI, Python, Excel, AWS, Tableau, SQL, Scrum and Agile, Business Management, and Applied Statistics.</p>
+    </section>
+
+    <section>
+        <h2>Internship Experience</h2>
+        <ul>
+            <li>IT Intern - United States Eastern Louisiana District Courthouse</li>
+            <li>IT Intern - Kinesics HMS</li>
+            <li>Summer Intern - IDScan.net</li>
         </ul>
-      </div>
-      <div class="top-bar-right">
-        <ul class="menu">
-          <li><a href="#">Three</a></li>
-          <li><a href="#">Four</a></li>
-          <li><a href="#">Five</a></li>
-          <li><a href="#">Six</a></li>
+    </section>
+
+    <section>
+        <h2>Future Job Outlooks</h2>
+        <p>I am currently looking for roles such as Data Analyst, Data Scientist, Business Analyst, IT Developer, Technical Product Manager, and Business Intelligence Analyst.</p>
+    </section>
+
+    <section>
+        <h2>Sample Work</h2>
+        <ul>
+            <li><a href="https://docs.google.com/presentation/d/16skx-S1UsVKIu38TMk-MXiXJNaejT7fuoLCLrF21ETQ/edit?usp=sharing" target="_blank">Presentation</a></li>
+            <li><a href="https://docs.google.com/document/d/1fIQN3XnNzLyIw4FkN2UtidvAR77NIplBzF2xEEdsZrA/edit?usp=sharing" target="_blank">Document</a></li>
+            <li><a href="https://drive.google.com/file/d/1_hjsd5WkksL2H9DfYvStQS3n_UBXccB1/view?usp=sharing" target="_blank">Resume</a></li>
         </ul>
-      </div>
-    </div>
-    <!-- End Top Bar -->
+    </section>
 
-    <div class="callout large">
-      <div class="row column text-center">
-        <h1>Welcome to Petrovinator's website</h1>
-        <p class="lead">This website is a dedicated portfolio where I dispaly coursework and internship experience.</p>
-        <a href="#" class="button large">Learn More</a>
-        <a href="#" class="button large hollow">Learn Less</a>
-      </div>
-    </div>
+    <section>
+        <h2>LinkedIn Profile</h2>
+        <p><a href="https://www.linkedin.com/in/daniel-petrov-aa5842210/" target="_blank">LinkedIn Profile</a></p>
+    </section>
 
-    <div class="row">
-      <div class="medium-6 columns medium-push-6">
-        <img class="thumbnail" src="https://media.licdn.com/dms/image/C4E03AQEKbYV6kNgqYQ/profile-displayphoto-shrink_400_400/0/1619331872474?e=2147483647&v=beta&t=5uHtktATd0bXg3jSlPtSTTvp4dkeRnONFHGSk8iWbI8">
-      </div>
-      <div class="medium-6 columns medium-pull-6">
-        <h2>About myself</h2>
-        <p> My name is Daniel Petrov, a first generation American born and raised in New Orleans, Louisiana. Since I was in High School, I have always had a strong passion for technology and anything computer related. That is why I decided to pursue a degree from Louisiana State University in Information Systems and Decision Sciences.
-        </p>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="medium-4 columns">
-        <h3>College Coursework</h3>
-        <p>Relevant Coursework Includes: PowerBI, Python, Excel, AWS, Tableau, SQL, Scrum and Agile, Business Management, Applied Statistics. </p>
-      </div>
-      <div class="medium-4 columns">
-        <h3>Internship Experience</h3>
-        <p> - IT Intern at United States Eastern District Courthouse New Orleans
-            - IT Intern at Kinesics LLC
-            - IT Intern at IDScan.net </p>
-      </div>
-      <div class="medium-4 columns">
-        <h3>Future Job Outlooks</h3>
-        <p> I am currently looking for any of the following or similar roles: Data Analyst, Data Scientist, Business Analyst, IT Developer, Technical Product Manager, Business Intelligence Analyst. </p>
-      </div>
-    </div>
-
-    <hr>
-
-    <div class="row column">
-      <ul class="vertical medium-horizontal menu expanded text-center">
-        <li><a href="#"><div class="stat">28</div><span>Websites</span></a></li>
-        <li><a href="#"><div class="stat">43</div><span>Apps</span></a></li>
-        <li><a href="#"><div class="stat">95</div><span>Ads</span></a></li>
-        <li><a href="#"><div class="stat">59</div><span>Cakes</span></a></li>
-        <li><a href="#"><div class="stat">18</div><span>Logos</span></a></li>
-      </ul>
-    </div>
-
-    <hr>
-
-    <div class="row column">
-      <h3>My Recent Work</h3>
-    </div>
-  
-
-    <hr>
-
-    <div class="row column">
-      <ul class="menu">
-        <li><a href="#">One</a></li>
-        <li><a href="#">Two</a></li>
-        <li><a href="#">Three</a></li>
-        <li><a href="#">Four</a></li>
-      </ul>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
+</body>
 </html>
