--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     <section>
         <h2>Sample Work</h2>
         <ul>
-            <li><a href="https://docs.google.com/presentation/d/16skx-S1UsVKIu38TMk-MXiXJNaejT7fuoLCLrF21ETQ/edit?usp=sharing" target="_blank">Presentation</a></li>
-            <li><a href="https://docs.google.com/document/d/1fIQN3XnNzLyIw4FkN2UtidvAR77NIplBzF2xEEdsZrA/edit?usp=sharing" target="_blank">Document</a></li>
-            <li><a href="https://drive.google.com/file/d/1_hjsd5WkksL2H9DfYvStQS3n_UBXccB1/view?usp=sharing" target="_blank">Resume</a></li>
+            <li><a href="https://docs.google.com/presentation/d/16skx-S1UsVKIu38TMk-MXiXJNaejT7fuoLCLrF21ETQ/edit?usp=sharing" target="_blank">Senior Tableau Project Thesis</a></li>
+            <li><a href="https://docs.google.com/document/d/1fIQN3XnNzLyIw4FkN2UtidvAR77NIplBzF2xEEdsZrA/edit?usp=sharing" target="_blank">Senior Capstone SDLC Deliverable</a></li>
+            <li><a href="https://drive.google.com/file/d/1_hjsd5WkksL2H9DfYvStQS3n_UBXccB1/view?usp=sharing" target="_blank">CDL PowerBI Project</a></li>
         </ul>
     </section>
 
