--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         <h2>LinkedIn Profile</h2>
         <p><a href="https://www.linkedin.com/in/daniel-petrov-aa5842210/" target="_blank">LinkedIn Profile</a></p>
     </section>
+<img class="thumbnail" src="https://media.licdn.com/dms/image/C4E03AQEKbYV6kNgqYQ/profile-displayphoto-shrink_400_400/0/1619331872474?e=2147483647&v=beta&t=5uHtktATd0bXg3jSlPtSTTvp4dkeRnONFHGSk8iWbI8">
 
 </body>
 </html>
