--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             padding: 2em 0;
         }
 
+        header img {
+            border-radius: 50%;
+            max-width: 150px;
+            margin-bottom: 1em;
+        }
+
         section {
             margin: 2em;
         }
@@ -39,6 +45,7 @@
 </head>
 <body>
     <header>
+        <img class="thumbnail" src="https://media.licdn.com/dms/image/C4E03AQEKbYV6kNgqYQ/profile-displayphoto-shrink_400_400/0/1619331872474?e=2147483647&v=beta&t=5uHtktATd0bXg3jSlPtSTTvp4dkeRnONFHGSk8iWbI8" alt="Daniel Petrov's profile picture">
         <h1>Welcome to Petrovinator's Website</h1>
         <p>This website is a dedicated portfolio where I display coursework and internship experience.</p>
     </header>
@@ -70,9 +77,9 @@
     <section>
         <h2>Sample Work</h2>
         <ul>
-            <li><a href="https://docs.google.com/presentation/d/16skx-S1UsVKIu38TMk-MXiXJNaejT7fuoLCLrF21ETQ/edit?usp=sharing" target="_blank">Senior Tableau Project Thesis</a></li>
-            <li><a href="https://docs.google.com/document/d/1fIQN3XnNzLyIw4FkN2UtidvAR77NIplBzF2xEEdsZrA/edit?usp=sharing" target="_blank">MotionDX App Manual</a></li>
-            <li><a href="https://drive.google.com/file/d/1_hjsd5WkksL2H9DfYvStQS3n_UBXccB1/view?usp=sharing" target="_blank">CDL PowerBI Project</a></li>
+            <li><a href="https://docs.google.com/presentation/d/16skx-S1UsVKIu38TMk-MXiXJNaejT7fuoLCLrF21ETQ/edit?usp=sharing" target="_blank">Presentation</a></li>
+            <li><a href="https://docs.google.com/document/d/1fIQN3XnNzLyIw4FkN2UtidvAR77NIplBzF2xEEdsZrA/edit?usp=sharing" target="_blank">Document</a></li>
+            <li><a href="https://drive.google.com/file/d/1_hjsd5WkksL2H9DfYvStQS3n_UBXccB1/view?usp=sharing" target="_blank">Resume</a></li>
         </ul>
     </section>
 
@@ -80,7 +87,6 @@
         <h2>LinkedIn Profile</h2>
         <p><a href="https://www.linkedin.com/in/daniel-petrov-aa5842210/" target="_blank">LinkedIn Profile</a></p>
     </section>
-<img class="thumbnail" src="https://media.licdn.com/dms/image/C4E03AQEKbYV6kNgqYQ/profile-displayphoto-shrink_400_400/0/1619331872474?e=2147483647&v=beta&t=5uHtktATd0bXg3jSlPtSTTvp4dkeRnONFHGSk8iWbI8">
 
 </body>
 </html>
