--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
     <title>Petrovinator's Portfolio</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Open Sans', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
-            color: #333;
+            background-color: #f9f9f9;
+            color: #444;
         }
 
         header {
@@ -18,19 +19,26 @@
             color: #fff;
             text-align: center;
             padding: 2em 0;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         header img {
             border-radius: 50%;
             max-width: 150px;
             margin-bottom: 1em;
+            border: 4px solid #fff;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
         }
 
         section {
             margin: 2em;
+            background-color: #fff;
+            padding: 1.5em;
+            border-radius: 8px;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        h2 {
+        h1, h2 {
             color: #3498db;
         }
 
@@ -40,6 +48,16 @@
 
         a {
             color: #3498db;
+            text-decoration: none;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 0.5em;
         }
     </style>
 </head>
@@ -77,9 +95,9 @@
     <section>
         <h2>Sample Work</h2>
         <ul>
-            <li><a href="https://docs.google.com/presentation/d/16skx-S1UsVKIu38TMk-MXiXJNaejT7fuoLCLrF21ETQ/edit?usp=sharing" target="_blank">Senior Tableau Thesis Presentation</a></li>
+            <li><a href="https://docs.google.com/presentation/d/16skx-S1UsVKIu38TMk-MXiXJNaejT7fuoLCLrF21ETQ/edit?usp=sharing" target="_blank">Senior Tableau Thesis Project</a></li>
             <li><a href="https://docs.google.com/document/d/1fIQN3XnNzLyIw4FkN2UtidvAR77NIplBzF2xEEdsZrA/edit?usp=sharing" target="_blank">MotionDX App Manual</a></li>
-            <li><a href="https://drive.google.com/file/d/1_hjsd5WkksL2H9DfYvStQS3n_UBXccB1/view?usp=sharing" target="_blank">CDL PowerBI Project</a></li>
+            <li><a href="https://drive.google.com/file/d/1_hjsd5WkksL2H9DfYvStQS3n_UBXccB1/view?usp=sharing" target="_blank">CDL PowerBI Dashboard</a></li>
         </ul>
     </section>
 
