--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <ul>
             <li><a href="https://docs.google.com/presentation/d/16skx-S1UsVKIu38TMk-MXiXJNaejT7fuoLCLrF21ETQ/edit?usp=sharing" target="_blank">Senior Tableau Thesis Project</a></li>
             <li><a href="https://drive.google.com/file/d/1_hjsd5WkksL2H9DfYvStQS3n_UBXccB1/view?usp=sharing" target="_blank">CDL PowerBI Dashboard</a></li>
-            <li><a href="https://docs.google.com/document/d/1jx2Wpv-e1_l7jn0GZSmb2jJDKBtgJoWWauda0_EIg0o/edit?usp=sharing"> Mobile Wallet SLDC Project Example</a></li>
+            <li><a href="https://drive.google.com/file/d/15jkQ0hbEDg_4IaOGEsHwr6f0vXzOKheu/view?usp=sharing"> Mobile Wallet SLDC Project Example</a></li>
         </ul>
     </section>
 
